Fixed z-index issue.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -13,7 +13,7 @@ body {
 /*          Controller START          */
 /*------------------------------------*/
 .controller {
-    position: absolute;
+    position: relative;
     top: 0;
     bottom: 0;
     left: 0;
@@ -26,7 +26,7 @@ body {
     box-shadow:
         inset 0 0 0 15px #3E4249,
         inset 0 34px 0 #3E4249;
-    margin: 0;
+    margin: auto;
 }
 
 /*---------- Left Section ----------*/
@@ -36,6 +36,7 @@ body {
     position: relative;
     margin-left: 15px;
     display: inline-block;
+    z-index: 0;
 }
 .controller .section-left .dpad {
     width: 90px;
@@ -100,6 +101,7 @@ body {
     height: 100%;
     position: relative;
     display: inline-block;
+    z-index: 0;
 }
 .controller .section-middle:before, .controller .section-middle:after {
     content: '';
@@ -206,6 +208,7 @@ body {
     height: 100%;
     position: relative;
     display: inline-block;
+    z-index: 0;
 }
 .controller .section-right .primary, .controller .section-right .secondary {
     position: absolute;
